fix hero image on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -294,7 +294,6 @@
 @media screen and (max-width: 480px) {
     .hero {
         background: url("../img/hero-mobile.jpg" no-repeat center center);
-        background-size: 40%;
     }
 
     .hero .hero-content {
